--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
         <img src="assets/img/profile img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Kotha Sravani</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://mobile.twitter.com/home" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="https://www.facebook.com/" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="https://www.instagram.com/exhausted_gal" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="https://secure.skype.com/portal/overview" class="google-plus"><i class="bx bxl-skype"></i></a>
           <a href="https://www.linkedin.com/in/sravani-kotha-91057b227" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://github.com/kothasravani" class="git"><i class="bx bxl-github"></i></a>
+          <a href="https://kothasravani.github.io/myportfolio.github.io/" class="portfolio"><i class="bx bxl-git"></i></a>
+          <a href="https://mobile.twitter.com/home" class="twitter"><i class="bx bxl-twitter"></i></a>
+          <a href="https://www.facebook.com/share/1YfHetTRBo/?mibextid=wwXIfr" class="facebook"><i class="bx bxl-facebook"></i></a>
         </div>
       </div>
 
@@ -75,7 +75,7 @@
 <section id="home" class="d-flex flex-column justify-content-center align-items-center">
   <div class="home-container" data-aos="fade-in">
     <h1>Kotha Sravani</h1>
-    <p>I'm <span class="typed" data-typed-items="Full Stack Developer, Data Analyst, Mobile Developer, Web Developer, UI/UX Designer"></span></p>
+    <p>I'm a <span class="typed" data-typed-items="Full Stack Developer, Data Analyst, Mobile Developer, Web Developer, UI/UX Designer"></span></p>
   </div>
 </section><!-- End home -->
 
@@ -192,44 +192,40 @@
   </div>
 </section><!-- End Facts Section -->
 
- <!-- skills Section -->
-   <section id="skills" class="skills section-bg">
+ <!-- Skills Section -->
+<section id="skills" class="skills section-bg py-5">
   <div class="container">
 
-    <div class="section-title">
+    <div class="section-title mb-5">
       <h2>Skills</h2>
-      <p>Skills are the expertise or talent needed in order to do a job or task. They make you confident and independent, and are essential for success in any role.</p>
+      <p>My technical expertise across development, tools, and methodologies.</p>
     </div>
 
-    <div class="row">
-      <div class="col-lg-6" data-aos="fade-up">
-        <h4>Frontend Development</h4>
-        <ul>
-          <li>HTML5, CSS3, JavaScript, Bootstrap, ReactJS, Swift UI</li>
-        </ul>
-
-        <h4>Backend & Programming</h4>
-        <ul>
-          <li>Java, C, C++, Node.js, Express.js, Firebase, REST APIs, Markdown, Pug</li>
-        </ul>
-
-        <h4>Mobile Applications</h4>
-        <ul>
-          <li>Android and iOS Application Development</li>
-          <li>Git, Git Desktop, GitHub, SourceTree, Jenkins, Bitbucket, Render, Postman</li>
-        </ul>
+    <div class="row gy-4">
+      <div class="col-lg-6">
+        <div class="skill-box">
+          <h5 class="fw-bold mb-2">Frontend Development</h5>
+          <p>HTML5, CSS3, JavaScript, Bootstrap, ReactJS, Swift UI</p>
+        </div>
+        <div class="skill-box">
+          <h5 class="fw-bold mb-2">Backend & Programming</h5>
+          <p>Java, C, C++, Node.js, Express.js, Firebase, REST APIs, Markdown, Pug</p>
+        </div>
+        <div class="skill-box">
+          <h5 class="fw-bold mb-2">Mobile Development & DevOps</h5>
+          <p>Android & iOS Apps, Git, GitHub, Git Desktop, SourceTree, Jenkins, Bitbucket, Render, Postman</p>
+        </div>
       </div>
 
-      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-        <h4>Databases & Tools</h4>
-        <ul>
-          <li>MySQL, MongoDB, Firebase, Tableau, Tableau Prep, Excel, Neo4j, Web Scraping</li>
-        </ul>
-
-        <h4>Practices</h4>
-        <ul>
-          <li>Agile, SDLC, Version Control, Documentation, Testing, Debugging, XML</li>
-        </ul>
+      <div class="col-lg-6">
+        <div class="skill-box">
+          <h5 class="fw-bold mb-2">Databases & Tools</h5>
+          <p>MySQL, MongoDB, Firebase, Neo4j, Excel, Tableau, Tableau Prep, Web Scraping</p>
+        </div>
+        <div class="skill-box">
+          <h5 class="fw-bold mb-2">Practices & Methodologies</h5>
+          <p>Agile, SDLC, Version Control, Documentation, Testing, Debugging, XML</p>
+        </div>
       </div>
     </div>
 
