--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         <h3 class="resume-title">Summary</h3>
         <div class="resume-item pb-0">
           <h4>Kotha Sravani</h4>
-          <p><em>Full Stack Developer with over 2 years of Android development experience and strong academic exposure in frontend design, iOS/web/mobile and data analytics. Proficient in Java, Firebase, REST APIs, Tableau. Adept at delivering responsive UI/UX interfaces and full-cycle application solutions across diverse platforms.</em></p>
+          <p><em>Full-Stack Developer with 3+ years of experience designing and delivering secure, scalable web and mobile applications. Strong background in Android banking solutions with key contributions to the DBS Banking App, utilizing Java, Firebase, and RESTful APIs. Skilled in Agile development and CI/CD pipelines with Jenkins, GitHub, and Jira to enhance efficiency and code quality. Successfully led innovative projects such as the EV Charger Locator and Heal Mind AI Bot, combining technical expertise with user-focused design to create impactful solutions.</em></p>
           <ul>
             <li>PA, 19335, USA</li>
             <li>+1 484-983-9933</li>
